fixed general visibility to support facedowns

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -785,6 +785,7 @@ a, h1, h2, h3, h4, h5, h6 .nav-button{
   z-index: 2;
   margin-bottom: 0;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  pointer-events: none;
 }
 
 .zone-data .zone-title {
@@ -796,6 +797,7 @@ a, h1, h2, h3, h4, h5, h6 .nav-button{
   margin: 0;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   z-index: 5;
+  pointer-events: none;
 }
 
 
